Fixed Paypal links so they'd open in a new window.

--- a/SuperDateTime/trunk/src/HTML/EN/plugins/SuperDateTime/settings/basic.html
+++ b/SuperDateTime/trunk/src/HTML/EN/plugins/SuperDateTime/settings/basic.html
@@ -4,8 +4,8 @@
 		<div class="prefDesc">[% "SETUP_GROUP_SUPERDATETIME_DESC" | string %]</div>
 <HR>
 <p>SuperDateTime is free and is released under the open source GNU General Public License for informational non-commerical use.<BR>Please support its development by donating directly via
-<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=gb@gregbrown.net&item_name=Greg Brown&no_shipping=0&no_note=1&tax=0&currency_code=USD&lc=US&bn=PP-DonationsBF&charset=UTF-8">PayPal</a>.</font></p>
-<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VMABB3654QVBW"><img src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border="0" alt="PayPal - The safer, easier way to pay online!" /></a>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=gb@gregbrown.net&item_name=Greg Brown&no_shipping=0&no_note=1&tax=0&currency_code=USD&lc=US&bn=PP-DonationsBF&charset=UTF-8" target='_new'>PayPal</a>.</font></p>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VMABB3654QVBW" target='_new'><img src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border="0" alt="PayPal - The safer, easier way to pay online!" /></a>
 <HR>
 	</div>
 
